--- a/Final_Project_Code/foremployers.html
+++ b/Final_Project_Code/foremployers.html
@@ -4,116 +4,177 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Employee Training Institute | About</title>
+    <title>Employee Training Institute | Employers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="/read_more.js">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="CSS/stylesheet.css">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </head>
 <body>
-
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col">    
-                <header>
+    <header> 
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">    
                     <div class="topbar">619-388-4967</div>
-                    <img class="logoimg" src="Assets/logo.png" alt="logo">
-                </header>
+                </div>
             </div>
-        </div>
-        <div class="row">
+            <!--<img class="logoimg" src="Assets/logo.png" alt="logo">-->
+            <div class="row">
+                <div class="col d-flex justify-content-center">            
+                    <nav class="navbar navbar-expand-md navbar-light bg-light">
+                        <a class="navbar-brand" href="index.html">
+                            <img src="Assets/logo.png" width="180" height="80" alt="ETI logo">
+                        </a>
+                        <a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                            </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="foremployers.html">Employers</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="studnets.html" target="_blank">Students</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="about.html" target="_blank">About ETI</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <!--<nav>
+                <ul class="nav justify-content-center">
+                    <li class="nav-item">
+                        <a class="nav-link " href="#">Employers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Students</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html" target="_blank">About ETI</a>
+                    </li>
+                </ul>
+            </nav>-->
+        <div class="row mission room align-items-center">
             <div class="col">
-                <nav>
-                    <ul class="nav justify-content-center">
-                        <li class="nav-item">
-                            <a class="nav-link " href="#">Employers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Students</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About ETI</a>
-                        </li>
-                    </ul>
-                </nav>
+                <h2 class="text-center room changeteal">Employers | Contract Education</h2>
             </div>
         </div>
-        <main>
-        <div class="row">
+        <div class="row mission room">
             <div class="col text-center">
-                <img src="Assets/banner.jpg" class="img-fluid" alt="">
+                <img src="Assets/network.jpg" class="img-fluid" alt="">
             </div>
         </div>
     </div>
+</header>
+    <main>
+        <div class="container-fluid">
+            <div class="row mission room">
+                <div class="col">
+                    <h4 class="text-center changeyellowwhite">We believe in applied learning that is agile and fits the needs of your organization today.</h4> 
+                </div>
+            </div> 
+        </div>
+            <div class="container"> 
+            <div class="row mission room">
+                <div class="col-5"> 
+                    <h4 class="border-bottom border-left">What is<br> Contract Education </h4>
+                </div>
+            </div>
+            <div class="row mission room"> 
+                <div class="col-md-10 offset-md-2">
+                    <div id="summary">
+                        <p class="collapse" id="collapseSummary">
+                        The Education Training Institute (ETI) at San Diego Continuing Education is a in a unique position to assist businesses, nonprofit organizations, and public entities with customized education and training for employees and/or clientele. Contract education services represent an entrepreneurial response to industry and employer needs to impact the success of regional businesses and other organizations the employ workers or train clients.<br>
+                        Customized training through Contract Education provides local businesses with employee education and training that meets specific and immediate needs. Educational opportunities range from short-term training seminars to long-term training programs.<br>
+                        ETI provides assistance and customized training support to employers and organizations that are increasing productivity. Plus, ETI works with organizations that workforce training and related skills (including English language instruction and soft skills trainings, such as customer service) to employers and organizations that facilitate the professional and personal growth of their clients.</p>
+                        <a class="collapsed" data-toggle="collapse" href="#collapseSummary" aria-expanded="false" aria-controls="collapseSummary"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row mission room">
+                <div class="col-5"> 
+                    <h4 class="border-bottom border-left"> Why<br> Contract Education Matters</h4>
+                </div>
+            </div>
+            <div class="row mission room"> 
+                <div class="col-md-10 offset-md-2">
+                    <div id="summary1">
+                        <p class="collapse" id="collapseSummary1">
+                        ETI delivers training programs for both future and current workers to prepare them to be competitive in the application of emerging technologies. Many businesses and organizations need assistance in developing corporate cultures that unleash the creative genius of the workers, give them new tools to increase productivity and improve the quality of products and processes.<br>
+                        Contract education services represent an entrepreneurial response to industry and employer needs to impact business. ETI takes deliberate efforts to reduce program costs to offer our partners the most competitive rates for education and training needs. </p>
+                        <a class="collapsed" data-toggle="collapse" href="#collapseSummary1" aria-expanded="false" aria-controls="collapseSummary1"></a> 
+                    </div>
+                </div>
+            </div> 
+        </div>
+    </main>
+    <aside>
+        <div class="container-fluid">
+            <div class="row mission room">
+                <div class="col mission room">
+                    <h3 class=" text-center changeyellowwhite">We are not satisfied until our clients are satisfied!</h3>
+                </div>
+            </div>
+        </div> 
+        <div class="container"> 
+            <div class="row mission"> 
+                <div class="col">
+                    <img src="/Assets/AdobeStock_56409179_lean2.png" alt="lean">
+                </div>
+                <div class="col">
+                    <p class="text-left">According to California Education Code Section 78020,  Contract education means those situations in which a community college district contracts with a public or private entity for the purposes of providing instruction or services or both by the community college."</p>
+                    <p>ETI aims to "work systematically with collaborative partners and companies to strengthen the organization's effectiveness, competitiveness, and profitability through education, training, and services that contribute to continuous workforce improvement." (California Education Code Section 66010.43)</p>
+                    <p>With unparalleled access to curriculum and subject matter experts, flexible scheduling and delivery formats, plus projects managed through one consistent source, ETI manages a wide scope of projects for a business of any size or industry.</p>
+                </div>
+            </div>
+        </div>
+    </aside>
 
-<!--Main for employers section-->
-<div class="container contract">
-    <div class="row">
-        <div class="col-md-4 col-sm-12">
-        <h3 class="border-bottom border-left">What is Contract Education?</h3>
-        </div>
-        <div class="col-md-8 col-sm-12">
-        <p>
-            The Education Training Institute (ETI) at San Diego Continuing Education is a in a unique position to assist businesses, nonprofit organizations, and public entities with customized education and training for employees and/or clientele. Contract education services represent an entrepreneurial response to industry and employer needs to impact the success of regional businesses and other organizations the employ workers or train clients.Customized training through Contract Education provides local businesses with employee education and training that meets specific and immediate needs. Educational opportunities range from short-term training seminars to long-term training programs. ETI provides assistance and customized training support to employers and organizations that are increasing productivity. Plus, ETI works with organizations that workforce training and related skills (including English language instruction and soft skills trainings, such as customer service) to employers and organizations that facilitate the professional and personal growth of their clients. 
-        </p>
-        </div>
-    </div>
-        <div class="row">
-            <div class="col-md-4 col-sm-12">
-            <h3 class="border-bottom border-left">Why Contract Education Matters</h3>
+    <footer>
+        <div class="container-fluid">
+            <div class="row mission room social">
+                <div class="col-md-8 col-12">
+                    <h4 class="invest">Invest In Your Future <br>Talk To Us</h4>
+                </div>
+                <div class="col-md-4 col-sm-12 talk">
+                    <a href="https://www.facebook.com/">
+                    <img class="img-thumbnail" src="./Assets/facebooklogoBW.png" alt="facebook logo">
+                    </a>
+                    <a href="https://twitter.com/?lang=en">
+                    <img class="img-thumbnail" src="./Assets/twitterlogoBW.png" alt="twitter logo">
+                    </a>
+                    <a href="https://www.linkedin.com/">
+                    <img class="img-thumbnail" src="./Assets/linkedInlogo4.png" alt="linked in logo">
+                    </a>
+                </div>
             </div>
-            <div class="col-md-8 col-sm-12">
-            <p>
-                ETI delivers training programs for both future and current workers to prepare them to be competitive in the application of emerging technologies. Many businesses and organizations need assistance in developing corporate cultures that unleash the creative genius of the workers, give them new tools to increase productivity and improve the quality of products and processes.Contract education services represent an entrepreneurial response to industry and employer needs to impact business. ETI takes deliberate efforts to reduce program costs to offer our partners the most competitive rates for education and training needs. According to California Education Code Section 78020, "Contract education means those situations in which a community college district contracts with a public or private entity for the purposes of providing instruction or services or both by the community college." ETI aims to "work systematically with collaborative partners and companies to strengthen the organization's effectiveness, competitiveness, and profitability through education, training, and services that contribute to continuous workforce improvement." (California Education Code Section 66010.43)With unparalleled access to curriculum and subject matter experts, flexible scheduling and delivery formats, plus projects managed through one consistent source, ETI manages a wide scope of projects for a business of any size or industry.Let ETI help you take your company to the next level.Contact us for a free training consultation.
-            </p>
+            <div class="row future">
+                <div class="col-md-8 col-sm-12">
+                    <p class="font-italic">Let ETI help you take to the next level.<br>We provide referrals upon request to potential clients that wish to speak with current and past clients.</p>
+                </div>
+                <div class="col-md-4 col-sm-12">  
+                    <p>4343 Ocean View Blvd<br>San Diego, CA 92113</p>
+                </div>
             </div>
-    </div>
-
-</div>
-<!---employers end-->
-
-<footer>
-    <div class="container-fluid">
-        <div class="row social">
-            <div class="col-md-8 col-12">
-                <h2 class="invest">Invest In Your Future <br>Talk To Us</h2>
-            </div>
-            <div class="col-md-4 col-sm-12 talk">
-                <a href="https://www.facebook.com/">
-                <img class="img-thumbnail" src="./Assets/facebooklogoBW.png" alt="facebook logo">
-                </a>
-                <a href="https://twitter.com/?lang=en">
-                <img class="img-thumbnail" src="./Assets/twitterlogoBW.png" alt="twitter logo">
-                </a>
-                <a href="https://www.linkedin.com/">
-                <img class="img-thumbnail" src="./Assets/linkedInlogo4.png" alt="linked in logo">
-                </a>
+            <div class="row location">
+                <div class="col-md-4 col-sm-12">
+                    <p>Kay Faulconer Bogan<br>Director of Industry Partnerships<br>
+                    <a href="kfboger@sdccd.edu">kfboger@sdccd.edu</a><br>619.388.4967</p>
+                    <button type="button" class="btn btn-info">Information</button>
+                </div>
+                <div class="col-md-4 col-sm-6"></div>
+                <div class="col-md-4 col-sm-6">  
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13430.030686516233!2d-117.1015642!3d32.6991351!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf5e9f0e9e72c3593!2sETi!5e0!3m2!1sen!2sus!4v1578508325063!5m2!1sen!2sus" class="map" allowfullscreen="" style="padding-top: 10px;"></iframe>
+                </div>
             </div>
         </div>
-        <div class="row future">
-            <div class="col-md-8 col-sm-12">
-                <p class="font-italic">Let ETI help you take to the next level.<br>We provide referrals upon request to potential clients that wish to speak with current and past clients.</p>
-            </div>
-            <div class="col-md-4 col-sm-12">  
-                <p>4343 Ocean View Blvd<br>San Diego, CA 92113</p>
-            </div>
-        </div>
-        <div class="row location">
-            <div class="col-md-4 col-sm-12">
-                <p>Kay Faulconer Bogan<br>Director of Industry Partnerships<br>
-                <a href="kfboger@sdccd.edu">kfboger@sdccd.edu</a><br>619.388.4967</p>
-                <button type="button" class="btn btn-info">Information</button>
-            </div>
-            <div class="col-md-4 col-sm-6"></div>
-            <div class="col-md-4 col-sm-6">  
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13430.030686516233!2d-117.1015642!3d32.6991351!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf5e9f0e9e72c3593!2sETi!5e0!3m2!1sen!2sus!4v1578508325063!5m2!1sen!2sus" class="map" allowfullscreen=""></iframe>
-            </div>
-        </div>
-    </div>
-</footer>
+    </footer>
 
 </body>
 </html>
