--- a/Final_Project_Code/about.html
+++ b/Final_Project_Code/about.html
@@ -127,7 +127,7 @@
         </div>
     </main>
     <article>
-        <div class="container-fluid mission room bgteal"> 
+        <div class="container-fluid mission room bgyellow"> 
             <div class="row mission room">
                 <div class="col-md-4 col-sm-12 why-card">
                     <div class="card">
