--- a/Final_Project_Code/index.html
+++ b/Final_Project_Code/index.html
@@ -114,42 +114,43 @@
                 <h4 class="text-center changeyellowwhite">
                     Learn More About The Training Programs We Offer
                 </h4>
-                <!--<p id="learnerparagraph">Learn More About The Training Programs We Offer</p>-->
             </div>
         </div> 
+    </div>
         <!--<div class="row mission">
             <div class="col text-center">
                 <h3 class="ETISolution mission room">ETI Is Your Solution</h3>
             </div>
         </div>-->
-        <div class="row mission room">
-            <div class="col-4 offset-md-1">
-                <a class="img-hover-zoom"  id="emplink" href="http://www.google.com" target="_blank">
-                    <img id="empimg" class="img-fluid" src="Assets/employer_writing.jpg" alt="employer" width="750">
-                </a>
+        <div class="container">
+            <div class="row mission room">
+                <div class="col-6">
+                    <a class="img-hover-zoom"  id="emplink" href="http://www.google.com" target="_blank">
+                        <img id="empimg" class="img-fluid" src="Assets/employer_writing.jpg" alt="employer" width="750">
+                    </a>
+                </div>
+                <div class="col-6">
+                    <a class="img-hover-zoom"  id="stlink" href="http://www.google.com" target="_blank">
+                        <img id="stimg" class="img-fluid" src="Assets/student_writing.jpg" alt="student" width="750" >
+                    </a>
+                </div>
             </div>
-            <div class="col-4 offset-md-2">
-                <a class="img-hover-zoom"  id="stlink" href="http://www.google.com" target="_blank">
-                    <img id="stimg" class="img-fluid" src="Assets/student_writing.jpg" alt="student" width="750" >
-                </a>
+            <div class="row mission">
+                <div class="col-5"> 
+                    <h4 class="border-bottom border-left">ETI<br> Is Your Solution</h4>
+                </div>
             </div>
-        </div>
-        <div class="row mission">
-            <div class="col-5"> 
-                <h4 class="border-bottom border-left">ETI<br> Is Your Solution</h4>
+            <div class="row mission"> 
+                <div class="col-md-6 offset-md-2">
+                    <p class="text-left">San Diego Community Colleges District’s Employee Training Institute (ETI) provides expertise and skills development to organizations and individuals, helping you do whatever you do, and do it better!</p>
+                    <p>We contribute to the economic development of the San Diego region to offer programs and services that complement those of the San Diego Community Colleges.</p>
+                    <button type="button" class="btn btn-success btnsuccess" style="margin-bottom: 5px;">Learn About ETI</button>
+                </div>
+                <div class="col-md-3 offset-md-0">
+                    <iframe id="video" src="https://www.youtube.com/embed/08kKW7kWTK8"></iframe>
+                </div>
             </div>
-        </div>
-        <div class="row mission"> 
-            <div class="col-md-6 offset-md-2">
-                <p class="text-left">San Diego Community Colleges District’s Employee Training Institute (ETI) provides expertise and skills development to organizations and individuals, helping you do whatever you do, and do it better!</p>
-                <p>We contribute to the economic development of the San Diego region to offer programs and services that complement those of the San Diego Community Colleges.</p>
-                <button type="button" class="btn btn-success btnsuccess" style="margin-bottom: 5px;">Learn About ETI</button>
-            </div>
-            <div class="col-md-3 offset-md-0">
-                <iframe id="video" src="https://www.youtube.com/embed/08kKW7kWTK8"></iframe>
-            </div>
-        </div>
-       
+     
         <!-- old layout -->
         <!--<div class="row">
             <div class="col text-left mission room">
@@ -174,20 +175,20 @@
         </div>
         <div class="row mission room"> 
             <div class="col-md-10 offset-md-2">
-            <img class="logos img-thumbnail" src="./Assets/padre.png" alt="" class="img-thumbnail">
-            <img class="logos img-thumbnail" src="./Assets/sdcommunity.png" alt="" class="img-thumbnail">
-            <img class="logos img-thumbnail" src="./Assets/marines.jpg" alt="" class="img-thumbnail">
-            <img class="logos img-thumbnail" src="./Assets/palomar.png" alt="" class="img-thumbnail"><br>
-            <img class="logos img-thumbnail" src="./Assets/lamesa.png" alt="" class="img-thumbnail">
-            <img class="logos img-thumbnail" src="./Assets/sd.png" alt="" class="img-thumbnail">
-            <img class="logos img-thumbnail" src="./Assets/sdge.png" class="img-thumbnail" alt="">
-            <img class="logos img-thumbnail" src="./Assets/utcaero.png" alt="" class="img-thumbnail"><br>
-            <img class="logos img-thumbnail" src="./Assets/helix.png" alt="" class="img-thumbnail">
-            <img class="logos img-thumbnail" src="./Assets/marriott.png" alt="" class="img-thumbnail">
-            <img class="logos img-thumbnail" src="./Assets/otay.png" class="img-thumbnail" alt="">
-            <img class="logos img-thumbnail" src="./Assets/kaser.png" alt="" class="img-thumbnail">
+                <img class="logos img-thumbnail" src="./Assets/padre.png" alt="" class="img-thumbnail">
+                <img class="logos img-thumbnail" src="./Assets/sdcommunity.png" alt="" class="img-thumbnail">
+                <img class="logos img-thumbnail" src="./Assets/marines.jpg" alt="" class="img-thumbnail">
+                <img class="logos img-thumbnail" src="./Assets/palomar.png" alt="" class="img-thumbnail"><br>
+                <img class="logos img-thumbnail" src="./Assets/lamesa.png" alt="" class="img-thumbnail">
+                <img class="logos img-thumbnail" src="./Assets/sd.png" alt="" class="img-thumbnail">
+                <img class="logos img-thumbnail" src="./Assets/sdge.png" class="img-thumbnail" alt="">
+                <img class="logos img-thumbnail" src="./Assets/utcaero.png" alt="" class="img-thumbnail"><br>
+                <img class="logos img-thumbnail" src="./Assets/helix.png" alt="" class="img-thumbnail">
+                <img class="logos img-thumbnail" src="./Assets/marriott.png" alt="" class="img-thumbnail">
+                <img class="logos img-thumbnail" src="./Assets/otay.png" class="img-thumbnail" alt="">
+                <img class="logos img-thumbnail" src="./Assets/kaser.png" alt="" class="img-thumbnail">
+            </div>
         </div>
-    </div>
     </div>
     <footer>
         <div class="container-fluid">
