--- a/Final_Project_Code/studnets.html
+++ b/Final_Project_Code/studnets.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/CSS/styles.css">
 </head>
 <body>
+    <!--Rachel-->
     <header>
         <div class="container-fluid">
             <div class="row">
