student header teal
teal

--- a/Final_Project_Code/about.html
+++ b/Final_Project_Code/about.html
@@ -45,7 +45,7 @@
                     </nav>
                 </div>
             </div>
-            <div class="row mission room align-items-center">
+            <div class="row mission room">
                 <div class="col">
                     <h2 class="text-center room changeteal">Reshaping the Landscape of Learning Today</h2>
                 </div>
