--- a/Final_Project_Code/studnets.html
+++ b/Final_Project_Code/studnets.html
@@ -45,9 +45,9 @@
                     </nav>
                 </div>
             </div>
-            <div class="row mission room align-items-center">
+            <div class="row mission room">
                 <div class="col">
-                    <h3 class="text-center room">Students | Free Based Education</h3>
+                    <h2 class="text-center room changeteal">Students | Free Based Education</h3>
                 </div>
             </div>
             <div class="row">
