--- a/Final_Project_Code/about.html
+++ b/Final_Project_Code/about.html
@@ -127,7 +127,7 @@
         </div>
     </main>
     <article>
-        <div class="container-fluid mission room bgteal"> 
+        <div class="container-fluid mission room"> 
             <div class="row mission room">
                 <div class="col-md-4 col-sm-12 why-card">
                     <div class="card">
@@ -165,7 +165,7 @@
     </article>
     <footer>
         <div class="container-fluid">
-            <div class="row mission room social">
+            <div class="row social">
                 <div class="col-md-8 col-12">
                     <h4 class="invest">Invest In Your Future <br>Talk To Us</h4>
                 </div>
