--- a/Final_Project_Code/index.html
+++ b/Final_Project_Code/index.html
@@ -192,7 +192,7 @@
     </div>
     <footer>
         <div class="container-fluid">
-            <div class="row mission room social">
+            <div class="row social">
                 <div class="col-md-8 col-12">
                     <h4 class="invest">Invest In Your Future <br>Talk To Us</h4>
                 </div>
