header color and stuff
changes

--- a/Final_Project_Code/foremployers.html
+++ b/Final_Project_Code/foremployers.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="CSS/stylesheet.css">
 </head>
 <body>
-    <!--Jesse-->
     <header> 
         <div class="container-fluid">
             <div class="row">
@@ -22,8 +21,7 @@
                     <div class="topbar">619-388-4967</div>
                 </div>
             </div>
-            <!--<img class="logoimg" src="Assets/logo.png" alt="logo">-->
-            <div class="row">
+            <div class="row bggreen">
                 <div class="col d-flex justify-content-center">            
                     <nav class="navbar navbar-expand-md navbar-light bg-light">
                         <a class="navbar-brand" href="index.html">
@@ -48,19 +46,6 @@
                     </nav>
                 </div>
             </div>
-            <!--<nav>
-                <ul class="nav justify-content-center">
-                    <li class="nav-item">
-                        <a class="nav-link " href="#">Employers</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Students</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html" target="_blank">About ETI</a>
-                    </li>
-                </ul>
-            </nav>-->
         <div class="row mission room align-items-center">
             <div class="col">
                 <h2 class="text-center room changeteal">Employers | Contract Education</h2>
