--- a/Final_Project_Code/studnets.html
+++ b/Final_Project_Code/studnets.html
@@ -20,7 +20,7 @@
                     <div class="topbar">619-388-4967</div>    
                 </div>
             </div>    
-            <div class="row">
+            <div class="row bggreen">
                 <div class="col d-flex justify-content-center">            
                     <nav class="navbar navbar-expand-md navbar-light bg-light">
                         <a class="navbar-brand" href="index.html">
@@ -47,7 +47,7 @@
             </div>
             <div class="row mission room">
                 <div class="col">
-                    <h2 class="text-center room changeteal">Students | Free Based Education</h3>
+                    <h2 class="text-center room changeteal">Students | Fee Based Education</h3>
                 </div>
             </div>
             <div class="row">
