--- a/Final_Project_Code/about.html
+++ b/Final_Project_Code/about.html
@@ -20,7 +20,7 @@
                     <div class="topbar">619-388-4967</div>    
                 </div>
             </div>    
-            <div class="row">
+            <div class="row bggreen">
                 <div class="col d-flex justify-content-center">            
                     <nav class="navbar navbar-expand-md navbar-light bg-light">
                         <a class="navbar-brand" href="index.html">
@@ -127,7 +127,7 @@
         </div>
     </main>
     <article>
-        <div class="container-fluid mission room"> 
+        <div class="container mission room"> 
             <div class="row mission room">
                 <div class="col-md-4 col-sm-12 why-card">
                     <div class="card">
