images with filter
images

--- a/Final_Project_Code/index.html
+++ b/Final_Project_Code/index.html
@@ -35,7 +35,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Employers</a>
+                            <a class="nav-link" href="foremployers.html" target="_blank">Employers</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="studnets.html" target="_blank">Students</a>
@@ -47,11 +47,6 @@
                 </nav>
             </div>
         </div>
-        <!--<div class="row mission room">
-            <div class="col">
-                <h2 class="text-center changegray">Employee Training Institute</h2>
-            </div>
-        </div>-->
         <div class="row mission room">
             <div class="col"> 
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -62,13 +57,13 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="Assets/img1.jpg" alt="First slide">
+                            <img class="d-block w-100" src="Assets/img1-filter.jpg" alt="First slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="Assets/img2.jpg" alt="Second slide">
+                            <img class="d-block w-100" src="Assets/img2-filter.jpg" alt="Second slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="Assets/img4.jpg" alt="Third slide">
+                            <img class="d-block w-100" src="Assets/img4-filter.jpg" alt="Third slide">
                         </div>
                         <div class="carousel-caption d-none d-md-block">
                             <h2 class="container" id="bannersubject">The skills you need to succeed</h2>
@@ -92,19 +87,18 @@
                 <h4 class="text-center changeyellowwhite">
                     Learn More About The Training Programs We Offer
                 </h4>
-                <!--<p id="learnerparagraph">Learn More About The Training Programs We Offer</p>-->
             </div>
         </div> 
     </div> 
     <div class="container">
         <div class="row mission room">
             <div class="col-4 offset-md-1">
-                <a class="img-hover-zoom"  id="emplink" href="http://www.google.com" target="_blank">
+                <a class="img-hover-zoom"  id="emplink" href="studnets.html" target="_blank">
                     <img id="empimg" class="img-fluid" src="Assets/employer_writing.jpg" alt="employer" width="750">
                 </a>
             </div>
             <div class="col-4 offset-md-2">
-                <a class="img-hover-zoom"  id="stlink" href="http://www.google.com" target="_blank">
+                <a class="img-hover-zoom"  id="stlink" href="foremployers.html" target="_blank">
                     <img id="stimg" class="img-fluid" src="Assets/student_writing.jpg" alt="student" width="750" >
                 </a>
             </div>
