--- a/Final_Project_Code/about.html
+++ b/Final_Project_Code/about.html
@@ -33,7 +33,7 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="foremployers.html">Employers</a>
+                                <a class="nav-link" href="foremployers.html" target="_blank">Employers</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="studnets.html" target="_blank">Students</a>
@@ -52,7 +52,7 @@
             </div>
             <div class="row mission room">
                 <div class="col text-center">
-                    <img src="Assets/banner.jpg" class="img-fluid" alt="">
+                    <img src="Assets/banner-filter.jpg" class="img-fluid" alt="">
                 </div>
             </div>
             <div class="row mission room">
