color change - ETI logo
changed logo color and nav font

--- a/Final_Project_Code/foremployers.html
+++ b/Final_Project_Code/foremployers.html
@@ -25,7 +25,7 @@
                 <div class="col d-flex justify-content-center">            
                     <nav class="navbar navbar-expand-md navbar-light bg-light">
                         <a class="navbar-brand" href="index.html">
-                            <img src="Assets/logo.jpg" width="180" height="80" alt="ETI logo">
+                            <img src="Assets/logo-teal.jpg" width="180" height="80" alt="ETI logo">
                         </a>
                         <a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
