shadow around yellow header
added shadow box around yellow header under images

--- a/Final_Project_Code/about.html
+++ b/Final_Project_Code/about.html
@@ -57,9 +57,9 @@
             </div>
             <div class="row mission room">
                 <div class="col">
-                    <h4 class="text-center changeyellowwhite">
-                        Next Level Education and Training
-                    </h4>
+                    <div class="shadow p-3 mb-5 bg-white rounded"> 
+                        <h4 class="text-center changeyellowwhite">Next Level Education and Training</h4> 
+                    </div>
                 </div>
             </div>
         </div>
