--- a/Final_Project_Code/index.html
+++ b/Final_Project_Code/index.html
@@ -84,9 +84,11 @@
     <div class="container-fluid">
         <div class="row mission room">
             <div class="col">
-                <h4 class="text-center changeyellowwhite">
-                    Learn More About The Training Programs We Offer
-                </h4>
+                <div class="shadow p-3 mb-5 bg-white rounded">
+                    <h4 class="text-center changeyellowwhite">
+                        Learn More About The Training Programs We Offer
+                    </h4>
+                </div>
             </div>
         </div> 
     </div> 
