--- a/Final_Project_Code/foremployers.html
+++ b/Final_Project_Code/foremployers.html
@@ -51,9 +51,9 @@
                 <h2 class="text-center room changeteal">Employers | Contract Education</h2>
             </div>
         </div>
-        <div class="row mission room">
+        <div class="row mission">
             <div class="col text-center">
-                <img src="Assets/network-filter2.jpg" class="img-fluid" alt="">
+                <img src="Assets/network-filter2.jpg" alt="">
             </div>
         </div>
     </div>
@@ -62,7 +62,9 @@
         <div class="container-fluid">
             <div class="row mission room">
                 <div class="col">
+                    <div class="shadow p-3 mb-5 bg-white rounded"> 
                     <h4 class="text-center changeyellowwhite">We believe in applied learning that is agile and fits the needs of your organization today.</h4> 
+                </div>
                 </div>
             </div> 
         </div>
