--- a/Final_Project_Code/studnets.html
+++ b/Final_Project_Code/studnets.html
@@ -50,16 +50,40 @@
                     <h2 class="text-center room changeteal">Students | Fee Based Education</h3>
                 </div>
             </div>
-            <div class="row">
+            <div class="row mission room">
                 <div class="col text-center">
                     <img src="Assets/group-filter.jpg" class="img-fluid" alt="">
                 </div>
             </div>
+            <div class="row mission room">
+                <div class="col">
+                    <div class="shadow p-3 mb-5 bg-white rounded"> 
+                        <h4 class="text-center changeyellowwhite">Next Level Education and Training</h4> 
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
-    <main>    
+    <main>  
+        <div class="container">
+            <div class="row mission room">
+                <div class="col-6">
+                    <p>In addition to San Diego Continuing Education’s free public course offerings (link to schedule), we offer a series of fee-based course offerings through the Education Training Institute (ETI) at a competitive rate. Anyone is eligible to apply. Some courses are offered online. Others are offered in a traditional brick and mortar, classroom-based format.</p>
+                </div>
+                <div class="col-6">
+                    <p>Presently, ETI offers face-to-face, classroom based fee-based courses in:</p >
+                    <p>Osha 10 – 10 hours , $100 per person     includes fee for    completion certificate<br>
+                     Smog Control Certificate, Auto – 28 hours, $450 per person includes completion certificate </p>
+                </div>
+            </div>
+        </div>  
     <div class="container">
-        <div class="row">
+        <div class="row mission room">
+            <div class="col-5">
+                <h4 class="border-bottom border-left">ETI Provides<br> Certificate Programs &amp; Courses Online</h4>
+            </div>
+        </div>
+        <div class="row mission room">
         <div class="col-3">
         <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
             <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-accF" role="tab" aria-controls="v-pills-home" aria-selected="true">Accounting and Finance</a>
