--- a/Final_Project_Code/studnets.html
+++ b/Final_Project_Code/studnets.html
@@ -60,7 +60,7 @@
     <main>    
     <div class="container">
         <div class="row">
-        <div class="col-3">
+        <div class="col-3 sticky">
         <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
             <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-accF" role="tab" aria-controls="v-pills-home" aria-selected="true">Accounting and Finance</a>
             <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-business" role="tab" aria-controls="v-pills-profile" aria-selected="false">Business</a>
@@ -84,7 +84,7 @@
             <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-write" role="tab" aria-controls="v-pills-settings" aria-selected="false">Writing and Publishing</a>
         </div>
         </div>
-        <div class="col-9">
+        <div class="col-9 a">
         <div class="tab-content" id="v-pills-tabContent">
             <div class="tab-pane fade show active" id="v-pills-accF" role="tabpanel" aria-labelledby="v-pills-home-tab">
             <ul class="list-group list-group-flush">
