--- a/Final_Project_Code/studnets.html
+++ b/Final_Project_Code/studnets.html
@@ -33,13 +33,13 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="foremployers.html" target="_blank">Employers</a>
+                                <a class="nav-link" href="foremployers.html" >Employers</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="studnets.html" target="_blank">Students</a>
+                                <a class="nav-link" href="studnets.html" >Students</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="about.html" target="_blank">About ETI</a>
+                                <a class="nav-link" href="about.html" >About ETI</a>
                             </li>
                         </ul>
                     </nav>
