--- a/Final_Project_Code/index.html
+++ b/Final_Project_Code/index.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="row bggreen">
-            <div class="col d-flex justify-content-center">            
+            <div class="col d-flex justify-content-center">         
                 <nav class="navbar navbar-expand-md navbar-light bg-light">
                     <a class="navbar-brand" href="index.html">
                         <img src="Assets/logo-teal.jpg" width="180" height="80" alt="ETI logo">
@@ -32,18 +32,19 @@
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                         </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="collapse navbar-collapser" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="foremployers.html" target="_blank">Employers</a>
+                            <a class="nav-link" href="foremployers.html" >Employers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="studnets.html" target="_blank">Students</a>
+                            <a class="nav-link" href="studnets.html" >Students</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html" target="_blank">About ETI</a>
+                            <a class="nav-link" href="about.html" >About ETI</a>
                         </li>
                     </ul>
+                    </div>
                 </nav>
             </div>
         </div>
