final updates. changed video cover
added contact page. changed visro image. linked all buttons. verified responsiveness

--- a/Final_Project_Code/index.html
+++ b/Final_Project_Code/index.html
@@ -35,13 +35,16 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="foremployers.html" target="_blank">Employers</a>
+                            <a class="nav-link" href="foremployers.html">Employers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="studnets.html" target="_blank">Students</a>
+                            <a class="nav-link" href="studnets.html">Students</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html" target="_blank">About ETI</a>
+                            <a class="nav-link" href="about.html">About ETI</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact US</a>
                         </li>
                     </ul>
                 </nav>
@@ -94,34 +97,37 @@
     </div> 
     <div class="container">
         <div class="row mission room">
-            <div class="col-4 offset-md-1">
+            <div class="col-lg-6 col-sm-12 room">
                 <a class="img-hover-zoom"  id="emplink" href="studnets.html" target="_blank">
                     <img id="empimg" class="img-fluid" src="Assets/employer_writing.jpg" alt="employer" width="750">
                 </a>
             </div>
-            <div class="col-4 offset-md-2">
+            <div class="col-lg-6 col-sm-12">
                 <a class="img-hover-zoom"  id="stlink" href="foremployers.html" target="_blank">
                     <img id="stimg" class="img-fluid" src="Assets/student_writing.jpg" alt="student" width="750" >
                 </a>
             </div>
         </div>
         <div class="row mission">
-            <div class="col-5"> 
+            <div class="col-lg-5 col-md-7 col-sm-12"> 
                 <h4 class="border-bottom border-left">ETI<br> Is Your Solution</h4>
             </div>
         </div>
         <div class="row mission"> 
-            <div class="col-md-6 offset-md-2">
+            <div class="col-lg-7 col-sm-12">
                 <p class="text-left">San Diego Community Colleges District’s Employee Training Institute (ETI) provides expertise and skills development to organizations and individuals, helping you do whatever you do, and do it better!</p>
                 <p>We contribute to the economic development of the San Diego region to offer programs and services that complement those of the San Diego Community Colleges.</p>
-                <button type="button" class="btn btn-success btnsuccess" style="margin-bottom: 5px;">Learn About ETI</button>
+                <p class="text-center"><a href="about.html"><button type="button" class="btn btn-info">Learn About ETI</button></a></p> 
             </div>
-            <div class="col-md-3 offset-md-0">
-                <iframe id="video" src="https://www.youtube.com/embed/08kKW7kWTK8"></iframe>
+            <div class="col-lg-5 col-sm-12 text-center watch">
+                <a href="https://www.youtube.com/embed/08kKW7kWTK8" target="_blank"> <h3 class="text-center">Watch ETI Video</h3></a>
+                <a href="https://www.youtube.com/embed/08kKW7kWTK8" target="_blank">
+                    <img src="./Assets/video-cover.jpg" alt="video" style="height: 50%; text-align: center;">
+                </a>
             </div>
         </div>
-        <div class="row mission room"> 
-            <div class="col-5"> 
+        <div class="row room"> 
+            <div class="col-lg-5 col-md-7 col-sm-12"> 
                 <h4 class="border-bottom border-left">Our<br> Clients</h4>
             </div>
         </div>
@@ -175,7 +181,7 @@
                 <div class="col-md-4 col-sm-12">
                     <p>Kay Faulconer Bogan<br>Director of Industry Partnerships<br>
                     <a href="kfboger@sdccd.edu">kfboger@sdccd.edu</a><br>619.388.4967</p>
-                    <button type="button" class="btn btn-info">Information</button>
+                    <a href="contact.html"><button type="button" class="btn btn-info">Information</button></a>
                 </div>
                 <div class="col-md-4 col-sm-6"></div>
                 <div class="col-md-4 col-sm-6">  
