--- a/Final_Project_Code/about.html
+++ b/Final_Project_Code/about.html
@@ -33,13 +33,16 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="foremployers.html" target="_blank">Employers</a>
+                                <a class="nav-link" href="foremployers.html">Employers</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="studnets.html" target="_blank">Students</a>
+                                <a class="nav-link" href="studnets.html">Students</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="about.html" target="_blank">About ETI</a>
+                                <a class="nav-link" href="about.html">About ETI</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Contact US</a>
                             </li>
                         </ul>
                     </nav>
@@ -67,7 +70,7 @@
     <main>
         <div class="container">
             <div class="row mission room">
-                <div class="col-5"> 
+                <div class="col-lg-5 col-sm-12 text-center">
                     <h4 class="border-bottom border-left">Our <br>Mission</h4> 
                 </div>
             </div>
@@ -79,7 +82,7 @@
                 </div>
             </div>
             <div class="row mission room">
-                <div class="col-5"> 
+                <div class="col-lg-5 col-sm-12 text-center">
                     <h4 class="border-bottom border-left">About<br>Employee Training Institute</h4>
                 </div>
             </div>
@@ -99,7 +102,7 @@
                 </div>
             </div>
             <div class="row mission room">
-                <div class="col-5">
+                <div class="col-lg-5 col-sm-12 text-center">
                     <h4 class="border-bottom border-left">Our <br>Approach</h4>
                 </div>
             </div>
@@ -120,7 +123,7 @@
                 </div>
             </div>
             <div class="row mission room">
-                <div class="col-5"> 
+                <div class="col-lg-5 col-sm-12 text-center"> 
                     <h4 class="border-bottom border-left">Why Partner With ETI?</h4>
                 </div>
             </div>
@@ -193,7 +196,7 @@
                 <div class="col-md-4 col-sm-12">
                     <p>Kay Faulconer Bogan<br>Director of Industry Partnerships<br>
                     <a href="kfboger@sdccd.edu">kfboger@sdccd.edu</a><br>619.388.4967</p>
-                    <button type="button" class="btn btn-info">Information</button>
+                    <a href="contact.html"><button type="button" class="btn btn-info">Information</button></a>
                 </div>
                 <div class="col-md-4 col-sm-6"></div>
                 <div class="col-md-4 col-sm-6">  
