--- a/Final_Project_Code/foremployers.html
+++ b/Final_Project_Code/foremployers.html
@@ -34,13 +34,16 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="foremployers.html" target="_blank">Employers</a>
+                                <a class="nav-link" href="foremployers.html">Employers</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="studnets.html" target="_blank">Students</a>
+                                <a class="nav-link" href="studnets.html">Students</a>
                             </li>
                             <li class="nav-item"></li>
-                                <a class="nav-link" href="about.html" target="_blank">About ETI</a>
+                                <a class="nav-link" href="about.html">About ETI</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Contact US</a>
                             </li>
                         </ul>
                     </nav>
@@ -53,7 +56,7 @@
         </div>
         <div class="row mission">
             <div class="col text-center">
-                <img src="Assets/network-filter2.jpg" alt="">
+                <img src="Assets/network-filter2.jpg" alt="" class="img-fluid">
             </div>
         </div>
     </div>
@@ -70,7 +73,7 @@
         </div>
             <div class="container"> 
             <div class="row mission room">
-                <div class="col-5"> 
+                <div class="col-lg-5 col-md-7 col-sm-12"> 
                     <h4 class="border-bottom border-left">What is<br> Contract Education </h4>
                 </div>
             </div>
@@ -86,7 +89,7 @@
                 </div>
             </div>
             <div class="row mission room">
-                <div class="col-5"> 
+                <div class="col-lg-5 col-md-7 col-sm-12"> 
                     <h4 class="border-bottom border-left"> Why<br> Contract Education Matters</h4>
                 </div>
             </div>
@@ -112,10 +115,10 @@
         </div> 
         <div class="container"> 
             <div class="row mission"> 
-                <div class="col">
+                <div class="col-lg-6 col-sm-12">
                     <img src="/Final_Project_Code/Assets/AdobeStock_56409179_lean2.png" alt="lean">
                 </div>
-                <div class="col">
+                <div class="col-lg-6 col-sm-12">
                     <p class="text-left">According to California Education Code Section 78020,  Contract education means those situations in which a community college district contracts with a public or private entity for the purposes of providing instruction or services or both by the community college."</p>
                     <p>ETI aims to "work systematically with collaborative partners and companies to strengthen the organization's effectiveness, competitiveness, and profitability through education, training, and services that contribute to continuous workforce improvement." (California Education Code Section 66010.43)</p>
                     <p>With unparalleled access to curriculum and subject matter experts, flexible scheduling and delivery formats, plus projects managed through one consistent source, ETI manages a wide scope of projects for a business of any size or industry.</p>
@@ -154,7 +157,7 @@
                 <div class="col-md-4 col-sm-12">
                     <p>Kay Faulconer Bogan<br>Director of Industry Partnerships<br>
                     <a href="kfboger@sdccd.edu">kfboger@sdccd.edu</a><br>619.388.4967</p>
-                    <button type="button" class="btn btn-info">Information</button>
+                    <a href="contact.html"><button type="button" class="btn btn-info">Information</button></a>
                 </div>
                 <div class="col-md-4 col-sm-6"></div>
                 <div class="col-md-4 col-sm-6">  
