--- a/Final_Project_Code/studnets.html
+++ b/Final_Project_Code/studnets.html
@@ -33,13 +33,16 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="foremployers.html" target="_blank">Employers</a>
+                                <a class="nav-link" href="foremployers.html">Employers</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="studnets.html" target="_blank">Students</a>
+                                <a class="nav-link" href="studnets.html">Students</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="about.html" target="_blank">About ETI</a>
+                                <a class="nav-link" href="about.html">About ETI</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Contact Us</a>
                             </li>
                         </ul>
                     </nav>
@@ -67,10 +70,10 @@
     <main>  
         <div class="container">
             <div class="row mission room">
-                <div class="col-6">
+                <div class="col-lg-6 col-sm-12">
                     <p>In addition to San Diego Continuing Education’s free public course offerings (link to schedule), we offer a series of fee-based course offerings through the Education Training Institute (ETI) at a competitive rate. Anyone is eligible to apply. Some courses are offered online. Others are offered in a traditional brick and mortar, classroom-based format.</p>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6 col-sm-12">
                     <p>Presently, ETI offers face-to-face, classroom based fee-based courses in:</p >
                     <p>Osha 10 – 10 hours , $100 per person     includes fee for    completion certificate<br>
                      Smog Control Certificate, Auto – 28 hours, $450 per person includes completion certificate </p>
@@ -551,7 +554,7 @@
                 <div class="col-md-4 col-sm-12">
                     <p>Kay Faulconer Bogan<br>Director of Industry Partnerships<br>
                     <a href="kfboger@sdccd.edu">kfboger@sdccd.edu</a><br>619.388.4967</p>
-                    <button type="button" class="btn btn-info">Information</button>
+                     <a href="contact.html"><button type="button" class="btn btn-info">Information</button></a>
                 </div>
                 <div class="col-md-4 col-sm-6"></div>
                 <div class="col-md-4 col-sm-6">  
